testsuite/tests/annotations/should_fail/annfail06.stderr
annfail06.hs:22:1: error: [GHC-28914]
    • Stage error: instance for ‘Data
                                   InstancesInWrongModule’ is bound at stage {1} but used at stage 0
    • In the annotation: {-# ANN f InstancesInWrongModule #-}

